<resources>
    <string name="app_name">A1_Ziyang_Wang</string>
    <string name="button_label_toast">Toast</string>
    <string name="toast_msg">Hello Toast</string>
    <string name="welcomeMsg">Welcome To Hackathon</string>
    <string name="registration">Registration</string>
    <string name="registerContinueButton">Continue</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="textview">TextView</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="home">Home</string>
    <string name="Explore">Explore</string>
    <string name="Feedback">Feedback</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="email_icon_desc">Email Icon</string>
    <string name="password_icon_desc">Password Icon</string>
    <string name="name_icon_desc">Name Icon</string>
    <string name="birthday_icon_desc">Birthday Icon</string>
    <string name="enter_birthday">Enter birthday</string>
    <string name="birthday">Birthday:</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="gender_icon_desc">Gender Icon</string>
    <string name="gender">Gender:</string>
    <string name="send_registration">Send Registration</string>
    <string name="name_entered">Name Entered</string>
    <string name="email_entered">Email Entered</string>
    <string name="password_entered">Password Entered</string>
    <string name="birthday_entered">Birthday Entered</string>
    <string name="gender_entered">Gender Entered</string>
    <string name="self_introduction">Self-introduction:</string>
    <string name="preferences">Preferences:</string>
    <string name="enter_preference">Enter preferences</string>
    <string name="enter_self_introduction">Enter self-introduction:</string>
    <string name="self_introduction_entered">Self-introduction Entered</string>
    <string name="preference_entered">Preferences Entered</string>
    <string name="successful_register">
        Congratulations! You have successfully registered for the event.We look forward to seeing you there!Here is your registered information.
    </string>


</resources>