<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFormOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Name Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/name_icon_desc"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:src="@drawable/user_name"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <!-- Email Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email_icon_desc"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:src="@drawable/email"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <!-- Password Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/password_icon_desc"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:src="@drawable/password"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <!-- Birthday Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/birthday_icon_desc"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:src="@drawable/birthday_cake"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/birthday" />

            <EditText
                android:id="@+id/birthdayEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:hint="@string/enter_birthday"
                android:inputType="date" />
        </LinearLayout>


        <!-- Gender Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gender_icon_desc"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:src="@drawable/gender"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/gender" />

            <EditText
                android:id="@+id/genderEditText"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:hint="@string/enter_gender"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registerSendPageOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:onClick="continueRegister"
        android:text="@string/registerContinueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>