<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:onClick="showToast"
        android:text="@string/button_label_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="271dp"
        android:layout_height="106dp"
        android:text="@string/welcomeMsg"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="660dp"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@+id/button_toast"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="homePage"
            android:text="@string/home"
            />

        <Button
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="explorePage"
            android:layout_marginEnd="8dp"
            android:text="@string/Explore" />

        <Button
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showRegisterForm"
            android:layout_marginEnd="8dp"
            android:text="@string/registration" />

        <Button
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="feedbackPage"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/Feedback"
           />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>